always run the compiler through ajax, and provide easyXDM-accessible library

--- a/src/compiler/mzscheme-vm/servlet-htdocs/index.html
+++ b/src/compiler/mzscheme-vm/servlet-htdocs/index.html
@@ -32,7 +32,7 @@
 
 <!---------------------------------------------------------------------->
 
-
+    <script src="easyXDM.js"></script>
     <script src="support.js"></script>
     <script src="evaluator.js"></script>
     <script src="main.js"></script>
