--- a/tests/test-htdocs/index.html
+++ b/tests/test-htdocs/index.html
@@ -5,6 +5,8 @@
     <script src="easyXDM.js"></script>
     <script src="support.js"></script>
     <script src="evaluator.js"></script>
+    <script src="exports.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="test-main.js"></script>
 <body>
 <h1>WeScheme compiler test suite</h1>
