keeping track of failures

--- a/tests/test-htdocs/index.html
+++ b/tests/test-htdocs/index.html
@@ -10,5 +10,6 @@
     <script src="test-main.js"></script>
 <body>
 <h1>WeScheme compiler test suite</h1>
+<span id="failure-index">Failures: </span>
 </body>
 </html>
