--- a/servlet-htdocs/rpc.html
+++ b/servlet-htdocs/rpc.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>rpc</title>
-    <script src="easyXDM.js"></script>
+    <script src="easyXDM-min.js"></script>
 </head>
 <script type="text/javascript">
 //////////////////////////////////////////////////////////////////////
