updating easyxdm, ensuring json2 is loaded for ie8

--- a/servlet-htdocs/rpc.html
+++ b/servlet-htdocs/rpc.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>rpc</title>
+    <script src="json2.js"></script>
     <script src="easyXDM-min.js"></script>
 </head>
 <script type="text/javascript">
