--- a/tests/test-htdocs/index.html
+++ b/tests/test-htdocs/index.html
@@ -7,6 +7,8 @@
     <script src="evaluator.js"></script>
     <script src="exports.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <!-- Fixme: can we add a gensym in the URL so that we avoid
+      caching behavior? -->
     <script src="test-main.js"></script>
 <body>
 <h1>WeScheme compiler test suite</h1>
