--- a/tests/test-htdocs/index.html
+++ b/tests/test-htdocs/index.html
@@ -4,6 +4,8 @@
 <head><title>WeScheme compiler test suite</title></head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
+    (function () {
+      'use strict';
       // We load all these scripts in this slightly funky way to force
       // no caching on this.
       var scripts = ["easyXDM.js", "support.js", "evaluator.js",
@@ -21,10 +23,13 @@
           }
       };
       doLoad(0);
+    }());
     </script>
 
 <body>
 <h1>WeScheme compiler test suite</h1>
-<span id="failure-index">Failures: </span>
+<div id="is-running"></div>
+
+<div id="failure-index">Failures: </div>
 </body>
 </html>
