Testing error: certain js symbols are leaking out.

--- a/servlet-htdocs/rpc.html
+++ b/servlet-htdocs/rpc.html
@@ -15,7 +15,7 @@ var Compiler = function(options) {
 var encodeUrlParameters = function(hash) {
     var chunks = [];
     for (var key in hash) {
-	if (hash.hasOwnProperty(key)) {
+	if (Object.hasOwnProperty.call(hash, key)) {
 	    chunks.push(encodeURIComponent(key) +"="+ encodeURIComponent(hash[key]));
 	}
     }
