--- a/servlet-htdocs/rpc.html
+++ b/servlet-htdocs/rpc.html
@@ -34,7 +34,9 @@ Compiler.prototype.compileProgram = function(programName, code, onDone, onDoneEr
     var xhr = new XMLHttpRequest();
     xhr.onreadystatechange = function() {
 	if (xhr.readyState == 4) {
-	    if (xhr.status === 200) {
+            if (xhr.status === 503) {
+                that.compileProgram(programName, code, onDone, onDoneError);
+            } else if (xhr.status === 200) {
                 onDone(xhr.responseText);
 	    } else {
                 onDoneError(xhr.responseText);
