--- a/tests/test-htdocs/index.html
+++ b/tests/test-htdocs/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head><title>WeScheme compiler test suite</title></head>
-    <script src="jquery.min.js" type="text/javascript"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
     (function () {
       'use strict';
